--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,20 @@
 	</properties>
 
 	<dependencies>
-	<dependency>
-  <groupId>org.thymeleaf</groupId>
-  <artifactId>thymeleaf</artifactId>
-  <version>3.0.11.RELEASE</version>
-</dependency>
+		<dependency>
+		  <groupId>org.thymeleaf</groupId>
+		  <artifactId>thymeleaf</artifactId>
+		  <version>3.0.11.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
+
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
