--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 	    <version>4.11</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+    <groupId>org.skyscreamer</groupId>
+    <artifactId>jsonassert</artifactId>
+    <version>1.5.0</version>
+    <scope>test</scope>
+</dependency>
 			
 		<dependency>
 		  <groupId>org.thymeleaf</groupId>
